Changes in version 0.2.1

Changes in version 0.2.0

- rs_pairs() has been reworked to be much faster and more general, while rs_unpair() has been removed. These changes are not backwards compatible.

- Added French translations.

- Fixed the NOTE about LazyData from CRAN.

Changes in version 0.1.2

- Fixed some small bugs, and made some minor improvements to the documentation.

Changes in version 0.1.1

- Now works with R >= 3.6.

- More informative error messages.